# osrs-ge-quant

./: .gitignore  README.md  analysis.py  bt_dashboard.py  create_desktop_icon.ps1  docker-compose.yml  pyproject.toml  readme.md  run_suite.bat  setup_maven.ps1  sweeps_3y_weirdgloop.csv
config/: accounts.yaml  processing_recipes.yaml  settings.yaml  strategies.yaml
dashboard/: README.md
dashboard/contracts/: terminalSnapshot.schema.json
dashboard/starter/src/: types.ts
docs/: TERMINAL_REBOOT_PLAN.md
osrs-ge-quant/config/: accounts.yaml  processing_recipes.yaml  settings.yaml  strategies.yaml
r/: README.md  market_regime_report.R
runelite-plugin/: pom.xml
runelite-plugin/src/main/java/net/runelite/client/plugins/gequant/: GeQuantConfig.java  GeQuantPanel.java  GeQuantPlugin.java
src/osrs_ge_quant/: __init__.py  api.py  automation.py  backtest.py  bayesian_opt.py  cli.py  config.py  cv_sentry.py  db.py  discord_bot.py  engine.py  event_study.py  export.py  ge_api.py  hiscores.py  ledger.py  ml_dqn.py  ml_lstm.py  ml_predictor.py  models.py  news.py  news_analyzer.py  notifications.py  portfolio.py  processing.py  reddit.py  screeners.py  sentiment_evaluator.py  sentinel.py  social_sentiment.py  speculator.py  strategy.py  walk_forward.py
src/osrs_ge_quant/backtest/: __init__.py  engine.py  loaders.py  metrics.py  simulator.py  sweep.py
src/osrs_ge_quant/webapp/: app.py  backtest_tab.py
src/osrs_ge_quant/webapp/assets/: style.css
src/osrs_ge_quant/webapp/templates/: index.html
