[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osrs-ge-quant"
version = "0.1.0"
description = "Multi-account quantitative trading & research framework for OSRS Grand Exchange"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
dependencies = [
  "requests>=2.32",
  "pandas>=2.2",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "openai>=1.40.0",
  "plotly>=5.24",
  "dash>=2.18",
  "scikit-learn>=1.5",
  "lightgbm>=4.3",
  "torch>=2.0.0",
  "flask>=3.0.0",
  "discord.py>=2.3.0",
  "youtube-transcript-api>=0.6.0",
]

[project.scripts]
osrs-ge-quant = "osrs_ge_quant.cli:main"

